--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,9 +26,9 @@
 										data-start="900"
 										data-easing="Power4.easeOut"
 										data-endeasing="Power4.easeIn">
-										<div class="tp-caption1-wd-1 tt-base-color">Bros</div>
-										<div class="tp-caption1-wd-2">Đồ án <br> cuối kì</div>
-										<div class="tp-caption1-wd-3">Môn học phát triển ứng dụng web</div>
+										<div class="tp-caption1-wd-1 tt-base-color">Bros Shop</div>
+										<div class="tp-caption1-wd-2">Sản phẩm đa dạng</div>
+										<div class="tp-caption1-wd-3">Chất lượng hàng đầu</div>
 										<div class="tp-caption1-wd-4"><a href="/products" target="_blank" class="btn btn-xl" data-text="Shop Now!">Mua sắm ngay!</a></div>
 									</div>
 								</li>
@@ -45,7 +45,6 @@
 										data-endeasing="Power4.easeIn">
 										<div class="tp-caption1-wd-1 tt-white-color">Website</div>
 										<div class="tp-caption1-wd-2 tt-white-color">Cửa hàng</div>
-										<div class="tp-caption1-wd-3 tt-white-color">Được xây dựng với express.js và ejs</div>
 										<div class="tp-caption1-wd-4"><a href="/products" target="_blank" class="btn btn-xl" data-text="Shop Now!">Mua sắm ngay!</a></div>
 									</div>
 								</li>
