--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -86,8 +86,7 @@
                                 <div class="tt-collapse-content">
                                     <address>
                                         <p><span>We are:</span>Bros shop</p>
-                                        <p><span>About Us:</span><a href="https://brogrammers2527.github.io/default.html">Brogrammers2527</a></p>
-                                        <p><span>E-mail:</span> <a href="mailto:nocodenolife2527@gmail.com">nocodenolife2527@gmail.com</a></p>
+                                        <p><span>E-mail:</span> <a href="mailto:hiep3452@gmail.com">hiep3452@gmail.com</a></p>
                                     </address>
                                 </div>
                             </div>
