--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -56,8 +56,9 @@
 			<div class="row">
 				<div class="tt-logo-container">
 					<!-- mobile logo -->
-					<a class="tt-logo tt-logo-alignment" href="/"><img src="/images/custom/logo.png" alt=""></a>
-					<!-- /mobile logo -->
+					<a class="tt-logo tt-logo-alignment" href="/">
+						<a class="tt-logo tt-logo-alignment" href="/">Bros</a>
+					</a>					<!-- /mobile logo -->
 				</div>
 			</div>
 		</div>
@@ -68,8 +69,9 @@
 			<div class="tt-header-holder">
 				<div class="tt-col-obj tt-obj-logo">
 					<!-- logo -->
-					<a class="tt-logo tt-logo-alignment" href="/"><img src="/images/custom/logo.png" alt=""></a>
-					<!-- /logo -->
+					<a class="tt-logo tt-logo-alignment" href="/">
+						<a class="tt-logo tt-logo-alignment" href="/">Bros</a>
+					</a>					<!-- /logo -->
 				</div>
 				<div class="tt-col-obj tt-obj-menu">
 					<!-- tt-menu -->
